--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <version>1.16.16</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
     </dependencies>
 
     <reporting>
