--- a/technical.properties
+++ b/technical.properties
@@ -1,3 +1,7 @@
 
 
 locators.path=C:\\Users\\ariahi\\git\\SeleniumTest\\locators
+
+login.url=http://www.demo.guru99.com/V4/index.php
+login.username=mngr178533
+login.password=uvyruqU
