--- a/technical.properties
+++ b/technical.properties
@@ -1,6 +1,6 @@
 
 
-locators.path=C:\\Users\\ariahi\\git\\SeleniumTest\\locators
+locators.path=./locators
 
 login.url=http://www.demo.guru99.com/V4/index.php
 login.username=mngr178533
